# required when you use libtool (for building shared libs)
ACLOCAL_AMFLAGS = -I m4

#	myth/config.h

nobase_include_HEADERS = \
	myth/myth.h \
	myth/myth_config.h \
	myth/myth_internal_lock.h \
	myth/myth_sleep_queue.h \
	myth/myth_sync.h \
	myth.h

## the last file, myth.h, is installed only to 
## signal an error to the user who install 
## <myth.h> (according to the old convention)
## not <myth/myth.h> (the new convention)


